@@ -836,8 +836,8 @@ void
 FilmEditor::content_remove_clicked ()
 {
 	ContentList c = selected_content ();
-	if (c.size() == 1) {
-		_film->remove_content (c.front ());
+	for (ContentList::iterator i = c.begin(); i != c.end(); ++i) {
+		_film->remove_content (*i);
 	}
 
 	content_selection_changed ();
@@ -864,13 +864,13 @@ FilmEditor::setup_content_sensitivity ()
 	VideoContentList video_selection = selected_video_content ();
 	AudioContentList audio_selection = selected_audio_content ();
 
-	_content_remove->Enable   (selection.size() == 1 && _generally_sensitive);
+	_content_remove->Enable   (!selection.empty() && _generally_sensitive);
 	_content_earlier->Enable  (selection.size() == 1 && _generally_sensitive);
 	_content_later->Enable    (selection.size() == 1 && _generally_sensitive);
 	_content_timeline->Enable (!_film->content().empty() && _generally_sensitive);
 
-	_video_panel->Enable	(video_selection.size() > 0 && _generally_sensitive);
-	_audio_panel->Enable	(audio_selection.size() > 0 && _generally_sensitive);
+	_video_panel->Enable	(!video_selection.empty() && _generally_sensitive);
+	_audio_panel->Enable	(!audio_selection.empty() && _generally_sensitive);
 	_subtitle_panel->Enable (selection.size() == 1 && dynamic_pointer_cast<FFmpegContent> (selection.front()) && _generally_sensitive);
 	_timing_panel->Enable	(selection.size() == 1 && _generally_sensitive);
 }
